<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Goals</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="goal_title">Title</string>
    <string name="goal_description">Description</string>
    <string name="goal_category">Category</string>
    <string name="From_date">From</string>
    <string name="From_time">From</string>
    <string name="To_date">To</string>
    <string name="to_date">to</string>
    <string name="to_time">to</string>
    <string name="goal_workload">Duration</string>
    <string name="hours">hrs</string>
    <string name="minutes">min</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_new_goal">New Goal</string>
    <string name="activities">"Associated activities"</string>
    <string name="create">Create</string>
    <string name="modify">Modify</string>
    <string name="modify_goal">Modify the goal</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="duration">Duration</string>
    <string name="Every">Every</string>
    <string name="until">Until</string>
    <string name="events">events</string>
    <string name="footer_add_goal">Add a new goal</string>
    <string name="footer_add_task">Add a new task</string>
    <string name="footer_add_activity">Add a new activity</string>
    <string name="estimatedWorkload">Estimated Workload</string>
    <string name="nbOf">Nb of</string>
    <string name="my_goal">My Goal</string>
    <string name="my_goals">My Goals</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_activity">My Activity</string>
    <string name="occurrences">occurrences</string>
    <string name="Activity_Workload">Activity Workload</string>
    <string name="Goal_deleted">Goal deleted</string>
    <string name="Activity_deleted">Activity deleted</string>
    <string name="tasks">tasks</string>
    <string name="Repetition">Repetition</string>
    <string name="notif_ticker_text">Are you ready to start your task?</string>
    <string name="notif_title">A task will start in 15 min</string>
    <string name="notif_text">One more step to your goal achievement!</string>

    <string name="forms_empty">One or several mandatory fields are empty!</string>
    <string name="forms_incorrect_date">The start date is more recent than the end date!</string>

    <string name="dialog_title_deleteActivity">Delete entry...</string>
    <string name="dialog_message_deleteActivity">This activity and its tasks will be deleted. Do you agree?</string>

    <string name="dialog_title_deleteGoal">Delete entry...</string>
    <string name="dialog_message_deleteGoal">Are you sure you want to delete this goal and all its tasks and activities?</string>

    <string name="dialog_title_uncheckTask">Uncheck this entry</string>
    <string name="dialog_message_uncheckTask">Do you really want to uncheck this task?</string>

    <string name="single_task_activity">One-time task</string>
    <string name="new_goal">New goal</string>
</resources>
