<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true">

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_gravity="left"
	    android:orientation="vertical"
	    android:scrollbarAlwaysDrawVerticalTrack="false"
	    android:scrollbars="vertical"
        android:clickable="false"
        android:focusable="false"
        android:id="@+id/root_layout">

	    <!-- Title -->

	    <TextView
	        android:id="@+id/l_goal_detail_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginBottom="4dp"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginTop="16dp"
	        android:text="@string/my_goal"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textStyle="bold" />

	    <!-- Description -->

	    <EditText
	        android:id="@+id/t_goal_detail_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/l_goal_detail_title"
	        android:layout_below="@id/l_goal_detail_title"
	        android:layout_marginBottom="4dp"
	        android:layout_marginRight="16dp"
	        android:layout_marginTop="4dp"
	        android:layout_toRightOf="@id/l_goal_detail_title"
	        android:ems="10"
	        android:hint="@string/title"
	        android:inputType="text" >

	        <requestFocus />
	    </EditText>

	    <EditText
	        android:id="@+id/t_goal_detail_description"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/l_goal_detail_title"
	        android:layout_below="@id/t_goal_detail_title"
	        android:layout_marginBottom="4dp"
	        android:layout_marginRight="16dp"
	        android:layout_marginTop="4dp"
	        android:ems="10"
	        android:hint="@string/description"
	        android:inputType="textMultiLine"
	        android:lines="2"
	        android:maxLines="2"
	        android:minLines="2" />

	    <!-- Category -->

	    <!-- Start Date -->
		<TextView
	        android:id="@+id/l_goal_detail_start_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/l_goal_detail_title"
	        android:layout_below="@id/t_goal_detail_description"
	        android:layout_marginBottom="4dp"
	        android:layout_marginTop="20dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginLeft="4dp"
	        android:text="@string/From_date"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textStyle="bold" />

		<TextView
	        android:id="@+id/t_pick_start_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/l_goal_detail_start_date"
	        android:layout_marginBottom="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginLeft="4dp"
	        android:layout_alignBaseline="@id/l_goal_detail_start_date"
	        android:layout_alignBottom="@id/l_goal_detail_start_date"
	        android:text="01/01/2014"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

		<!--
		<DatePicker
	        android:id="@+id/d_goal_start_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/l_goal_detail_title"
	        android:layout_below="@id/l_goal_detail_start_date"
	        android:layout_marginBottom="4dp"
	        android:layout_marginTop="4dp"
	        android:calendarViewShown="false" />
		-->

	    <!-- Target Date -->

	    <TextView
	        android:id="@+id/l_goal_detail_end_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/l_goal_detail_title"
	        android:layout_below="@id/l_goal_detail_start_date"
	        android:layout_marginBottom="4dp"
	        android:layout_marginTop="20dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginLeft="4dp"
	        android:text="@string/To_date"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/t_pick_end_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/l_goal_detail_workload"
	        android:layout_alignLeft="@+id/t_pick_start_date"
	        android:layout_marginBottom="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_alignBaseline="@id/l_goal_detail_end_date"
	        android:layout_alignBottom="@id/l_goal_detail_end_date"
	        android:text="31/12/2014"
	        android:textAppearance="?android:attr/textAppearanceMedium" />


	    <!-- Estimated effort -->

        <TextView
           android:id="@+id/l_goal_detail_workload"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@id/l_goal_detail_title"
           android:layout_below="@id/l_goal_detail_end_date"
           android:layout_marginBottom="4dp"
           android:layout_marginTop="20dp"
           android:text="@string/estimatedWorkload"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:textStyle="bold" />

        <EditText
            android:id="@+id/t_goal_hours"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/l_goal_detail_title"
            android:layout_below="@id/l_goal_detail_workload"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/l_goal_detail_workload"
            android:ems="10"
            android:gravity="bottom|right"
            android:hint="@string/nbOf"
            android:inputType="number" />

        <TextView
           android:id="@+id/l_goal_hours"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBaseline="@id/t_goal_hours"
           android:layout_alignBottom="@id/t_goal_hours"
           android:layout_marginBottom="4dp"
           android:layout_marginLeft="4dp"
           android:layout_marginRight="4dp"
           android:layout_marginTop="4dp"
           android:layout_toRightOf="@id/t_goal_hours"
           android:text="@string/hours"
           android:textAppearance="?android:attr/textAppearanceMedium" />

	    <!-- Submit button -->

        <Button
            android:id="@+id/btn_goal_detail_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/t_goal_hours"
            android:layout_below="@id/t_goal_hours"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/create" />

        <!--
        <Spinner
            android:id="@+id/sp_goal_detail_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/l_goal_detail_title"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp" />
        -->

        <ImageView
            android:id="@+id/i_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:contentDescription="Goal Color"
            android:clickable="true"
            android:src="@drawable/ic_menu_colorpicker_holo_light" />

	</RelativeLayout>

</ScrollView>

