<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="vertical">

        <!-- Title -->

        <TextView
            android:id="@+id/l_activity_goalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/my_goal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <!-- Description -->

        <EditText
            android:id="@+id/t_activity_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/l_activity_goalTitle"
            android:layout_below="@id/l_activity_goalTitle"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/l_activity_goalTitle"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text">

        </EditText>

        <EditText
            android:id="@+id/t_activity_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/l_activity_goalTitle"
            android:layout_below="@id/t_activity_title"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:minLines="2" />

        <!-- Start Date -->

        <TextView
            android:id="@+id/l_activity_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/l_activity_goalTitle"
            android:layout_below="@id/t_activity_description"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/From_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t_activity_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/l_activity_start_date"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_toRightOf="@+id/l_task_duration"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="01/01/2014"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/t_activity_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/l_activity_start_date"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/t_activity_start_date"
            android:text="00:00"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Duration -->

        <TextView
            android:id="@id/l_task_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/l_activity_start_date"
            android:layout_below="@id/t_activity_start_date"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/duration"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t_task_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/l_task_duration"
            android:layout_alignBottom="@+id/l_task_duration"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_toRightOf="@+id/l_task_duration"
            android:text="01:00"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Repetition

        <TextView
            android:id="@+id/l_repetition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/l_activity_start_date"
            android:layout_below="@+id/l_task_duration"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/Repetition"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" /> -->

        <TextView
            android:id="@+id/t_frequency"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/l_activity_start_date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/l_activity_start_date"
            android:layout_below="@+id/l_task_duration"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/does_not_repeat"
            android:textAppearance="@android:style/TextAppearance.Medium" />
        <!--
                android:layout_alignBaseline="@id/l_repetition"
                android:layout_toRightOf="@id/l_repetition"
        -->

        <!-- Submit button -->
        <View
            android:id="@+id/buttonLine"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_below="@id/t_frequency"
            android:layout_marginTop="20dp"
            android:background="?android:attr/dividerHorizontal" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLine"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="5"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/btn_submit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="5"
                android:text="@string/create" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>