<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >
-->
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="vertical" >

        <!-- Title -->
        <TextView
            android:id="@+id/l_goal_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/my_goal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t_goal_detail_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/l_goal_detail_title"
            android:layout_below="@id/l_goal_detail_title"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/l_goal_detail_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="no title" >
            <requestFocus />
        </TextView>

        <!-- Description -->

        <TextView
            android:id="@+id/t_goal_detail_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/l_goal_detail_title"
            android:layout_below="@id/t_goal_detail_title"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="no description"
            android:lines="2" />

        <!-- Category
        <ImageView
            android:id="@+id/img_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:src="@android:drawable/ic_menu_gallery" />
        -->

        <!-- Start Date -->
        <TextView
            android:id="@+id/l_goal_detail_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/l_goal_detail_title"
            android:layout_below="@id/t_goal_detail_description"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/From_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

         <!-- Target Date -->

        <TextView
            android:id="@+id/l_goal_detail_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/l_goal_detail_title"
            android:layout_below="@id/l_goal_detail_start_date"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/To_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <!-- Estimated effort  -->

        <TextView
            android:id="@+id/l_goal_detail_workload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/l_goal_detail_title"
            android:layout_below="@id/l_goal_detail_end_date"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/goal_workload"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t_goal_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/l_goal_detail_end_date"
            android:layout_alignBottom="@+id/l_goal_detail_end_date"
            android:layout_alignLeft="@+id/t_goal_start_date"
            android:layout_toRightOf="@id/l_goal_detail_end_date"
            android:text="31/12/2999"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/t_goal_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/l_goal_detail_start_date"
            android:layout_alignBottom="@+id/l_goal_detail_start_date"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/l_goal_detail_start_date"
            android:text="01/01/2014"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/t_goal_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/l_goal_detail_workload"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/l_goal_detail_workload"
            android:text="50 hrs"
            android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
<!-- </ScrollView> -->

